config database and port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/e_learning
+spring.datasource.username= ${POSTGRES_USER:postgres}
+spring.datasource.password= ${POSTGRES_PASSWORD:vu05042001}
 
+server.port : ${WEB_PORT:8888}
