--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,21 +5,40 @@ on:
     branches: [ "CIandCDConfig" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
+    env:
+      DOCKER_USER: ${{secrets.DOCKER_USER}} # name of Docker Hub ID
+      DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+      IMAGE_NAME: daotao
+      IMAGE_TAG: ${{ github.run_number }} # $GITHUB_RUN_NUMBER
+      
+      CLUSTER_NAME: aks-cluster
+      RESOURSE_GROUP: rg-aks-cluster
 
     steps:
     - uses: actions/checkout@v3
-    - name: Login to docker hub
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+
+    - name: Login to Docker Hub
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag daotao:$(date +%s)
+      run: docker build . --file Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:$IMAGE_TAG
+
     - name: Docker push to docker hub
-      run: docker push ${{secrets.DOCKER_USER}}/daotao
+      run: docker push $DOCKER_USER/IMAGE_NAME:$GITHUB_RUN_NUMBER
+
+    - name: Replace variables in kubernetes yaml file
+      uses: cschleiden/replace-tokens@v1
+      with:
+        files: '["kubernetes/*.yaml"]'
+        tokenPrefix: __ # optional, default is #{
+        tokenSuffix: __ # optional, default is }#
+      env:
+        DOCKER_REPOSITORY: ${{ env.DOCKER_USER }}
+        IMAGE_NAME: ${{ env.IMAGE_NAME }}
+        IMAGE_TAG: ${{ env.IMAGE_TAG }}
