--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "CIandCDConfig" ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -21,14 +21,29 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    # - name: Login to Docker Hub
+    #   run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+
+    # - name: Build the Docker image
+    #   run: docker build . --file Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:$IMAGE_TAG
+
+    # - name: Docker push to docker hub
+    #   run: docker push $DOCKER_USER/$IMAGE_NAME:$GITHUB_RUN_NUMBER
+
     - name: Login to Docker Hub
-      run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      uses: docker/login-action@v2
+      with:
+        username: $DOCKER_USER
+        password: $DOCKER_PASSWORD
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:$IMAGE_TAG
-
-    - name: Docker push to docker hub
-      run: docker push $DOCKER_USER/$IMAGE_NAME:$GITHUB_RUN_NUMBER
+    - name: Build and push the Docker image
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: |
+          $DOCKER_USER/$IMAGE_NAME:$IMAGE_TAG
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     - name: Replace variables in kubernetes yaml file
       uses: cschleiden/replace-tokens@v1
@@ -40,3 +55,20 @@ jobs:
         DOCKER_REPOSITORY: ${{ env.DOCKER_USER }}
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
+  
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: executing remote ssh commands using ssh key
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.HOST_USERNAME }}
+        key: ${{ secrets.HOST_KEY }}
+        source: kubernetes/*
+        target: chuyende/
+        script: |
+          ls
