--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,15 +33,15 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: $DOCKER_USER
-        password: $DOCKER_PASSWORD
+        username: ${{ env.DOCKER_USER }}
+        password: ${{ env.DOCKER_PASSWORD }}
 
     - name: Build and push the Docker image
       uses: docker/build-push-action@v3
       with:
         push: true
         tags: |
-          $DOCKER_USER/$IMAGE_NAME:$IMAGE_TAG
+          ${{ env.DOCKER_USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
