--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -72,6 +72,8 @@ jobs:
         username: ${{ secrets.HOST_USERNAME }}
         key: ${{ secrets.HOST_KEY }}
         source: kubernetes/*
-        target: chuyende/
+        target: chuyende
         script: |
+          ls
+          cd chuyende
           ls
