--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -65,14 +65,21 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Copy config file to server
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.HOST_USERNAME }}
+        key: ${{ secrets.HOST_KEY }}
+        source: "kubernetes/*.yaml"
+        target: "chuyende"
+
     - name: executing remote ssh commands using ssh key
       uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.HOST_USERNAME }}
         key: ${{ secrets.HOST_KEY }}
-        source: "kubernetes/*"
-        target: chuyende
         script: |
           ls
           cd chuyende
