--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -71,7 +71,7 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.HOST_USERNAME }}
         key: ${{ secrets.HOST_KEY }}
-        source: "kubernetes/*.yaml"
+        source: "kubernetes/*.yaml, docker-compose.yaml"
         target: "chuyende"
 
     - name: executing remote ssh commands using ssh key
@@ -81,6 +81,5 @@ jobs:
         username: ${{ secrets.HOST_USERNAME }}
         key: ${{ secrets.HOST_KEY }}
         script: |
-          ls
-          cd chuyende
-          ls
+          docker-compose up
+          kubectl get all -owide
