--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -71,7 +71,8 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.HOST_USERNAME }}
         key: ${{ secrets.HOST_KEY }}
-        source: "kubernetes/*.yaml, docker-compose.yaml"
+        # source: "kubernetes/*.yaml, docker-compose.yaml"
+        source: "docker-compose.yaml"
         target: "chuyende"
 
     - name: executing remote ssh commands using ssh key
