--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,8 @@ services:
 
   webapp:
     container_name: webcontainer
-    image: ilearning
+    # image: ilearning
+    image: __DOCKER_REPOSITORY__/__IMAGE_NAME__:__IMAGE_TAG__
     ports:
       - "8080:8080"
     depends_on:
