--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,6 +47,20 @@ jobs:
           ${{ env.DOCKER_USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+  
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    env:
+      DOCKER_USER: ${{secrets.DOCKER_USER}} # name of Docker Hub ID
+      DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+      IMAGE_NAME: daotao
+      IMAGE_TAG: ${{ github.run_number }} # $GITHUB_RUN_NUMBER
+      
+      CLUSTER_NAME: aks-cluster
+      RESOURSE_GROUP: rg-aks-cluster
+    steps:
+    - uses: actions/checkout@v3
 
     - name: Replace variables in kubernetes yaml file
       uses: cschleiden/replace-tokens@v1
@@ -58,12 +72,6 @@ jobs:
         DOCKER_REPOSITORY: ${{ env.DOCKER_USER }}
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
-  
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-    - uses: actions/checkout@v3
 
     - name: Copy config file to server
       uses: appleboy/scp-action@v0.1.4
