--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,5 +24,7 @@ services:
       POSTGRES_PORT: 5432
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: vu05042001
-    
+      AMAZON_S3_BUCKET: __AMAZON_S3_BUCKET__
+      AMAZON_S3_ACCESSKEY: __AMAZON_S3_ACCESSKEY__
+      AMAZON_S3_PRIVATEKEY: __AMAZON_S3_PRIVATEKEY__
     
