--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username= ${POSTGRES_USER:postgres}
 spring.datasource.password= ${POSTGRES_PASSWORD:vu05042001}
 
 server.port : ${WEB_PORT:8080}
+
+amazonProperties.bucketName=${AMAZON_S3_BUCKET}
+amazonProperties.accessKey=${AMAZON_S3_ACCESSKEY}
+amazonProperties.secretKey=${AMAZON_S3_PRIVATEKEY}
