--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/e_learning
 spring.datasource.username= ${POSTGRES_USER:postgres}
 spring.datasource.password= ${POSTGRES_PASSWORD:vu05042001}
-
+spring.jpa.hibernate.ddl-auto=update
 server.port : ${WEB_PORT:8080}
 
 amazonProperties.bucketName=${AMAZON_S3_BUCKET}
