--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/e_learning
 spring.datasource.username= ${POSTGRES_USER:postgres}
 spring.datasource.password= ${POSTGRES_PASSWORD:vu05042001}
-spring.jpa.hibernate.ddl-auto=update
+
 server.port : ${WEB_PORT:8080}
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
+
+spring.mandatory-file-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 
 amazonProperties.bucketName=${AMAZON_S3_BUCKET}
 amazonProperties.accessKey=${AMAZON_S3_ACCESSKEY}
