--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.servlet.multipart.max-request-size=500MB
 amazonProperties.bucketName=${AMAZON_S3_BUCKET}
 amazonProperties.accessKey=${AMAZON_S3_ACCESSKEY}
 amazonProperties.secretKey=${AMAZON_S3_PRIVATEKEY}
+
+config.mail.host=smtp.gmail.com
+config.mail.port=587
+config.mail.username=nguyenquangvu05042001@gmail.com
+config.mail.password=vu05042001
