--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,21 +17,14 @@ jobs:
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       IMAGE_NAME: daotao
       IMAGE_TAG: ${{ github.run_number }} # $GITHUB_RUN_NUMBER
-
+      AMAZON_S3_BUCKET: ${{secrets.AMAZON_S3_BUCKET}}
+      AMAZON_S3_ACCESSKEY: ${{secrets.AMAZON_S3_ACCESSKEY}}
+      AMAZON_S3_PRIVATEKEY: ${{secrets.AMAZON_S3_PRIVATEKEY}}
       CLUSTER_NAME: aks-cluster
       RESOURSE_GROUP: rg-aks-cluster
 
     steps:
     - uses: actions/checkout@v3
-
-    # - name: Login to Docker Hub
-    #   run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:$IMAGE_TAG
-
-    # - name: Docker push to docker hub
-    #   run: docker push $DOCKER_USER/$IMAGE_NAME:$GITHUB_RUN_NUMBER
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -41,6 +34,17 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+
+    - name: Replace variables in Dockerfile
+      uses: cschleiden/replace-tokens@v1
+      with:
+        files: '["Dockerfile"]'
+        tokenPrefix: __ # optional, default is #{
+        tokenSuffix: __ # optional, default is }#
+      env:
+        AMAZON_S3_BUCKET: ${{env.AMAZON_S3_BUCKET}}
+        AMAZON_S3_ACCESSKEY: ${{env.AMAZON_S3_ACCESSKEY}}
+        AMAZON_S3_PRIVATEKEY: ${{env.AMAZON_S3_PRIVATEKEY}}
 
     - name: Build and push the Docker image
       uses: docker/build-push-action@v3
